@@ -4,6 +4,7 @@
   * (copy) add nav, aside
   * (visibility) opacity steps by 5
   * (border) add border-width
+  * (outline) outline outline-offset
   * (variables) drop --default-* properties
 
 # 0.24.0 (2023-03-10)
